# programming_labs_2_Sem_ITMO

./: AllocatorT.cpp  AllocatorT.h  CMakeLists.txt  ClosedPolyLine.cpp  ClosedPolyLine.h  Cube.cpp  Cube.h  Friedrich.cpp  Friedrich.h  LineMethods.cpp  LineMethods.h  Point.cpp  Point.h  PolyLine.cpp  PolyLine.h  Polygon.cpp  Polygon.h  Polynomial.cpp  Polynomial.h  README.md  RegularPolygon.cpp  RegularPolygon.h  ShapeMethods.cpp  ShapeMethods.h  Source.cpp  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  chuncClass.cpp  chuncClass.h  currency.cpp  currency.h  customAllocatorStrategy.cpp  customAllocatorStrategy.h  diag  filename.cpp  inputCubik.txt  interface.cpp  interface.h  (+12 more)
